--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.1",
     "css-loader": "^3.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
